@@ -1,6 +1,9 @@
 Revision history for Apache::AuthCookie
 
 {{$NEXT}}
+   - skip the test suite if running as root.  Apache::Test 1.34 fails the test
+     suite if running as root instead of skipping it.  By skipping, AuthCookie can
+     be installed via CPAN.pm as root.
 
 3.16  2011-01-19
    - require Apache::Test 1.32 - fixes ubuntu build issue
